--- a/tools/website/index.html
+++ b/tools/website/index.html
@@ -9,9 +9,9 @@
 
 <body ondragstart="return false;" ondrop="return false;">
     <div class="navbar round-border-low" style="backdrop-filter: blur(5px);">
-        <li style="float:left"><a class="active_f blur" href="/FennixProject/">Fennix Project</a></li>
-        <a href="/FennixProject/full_documentations"><i class="fa-solid fa-book-bookmark"></i> Full Documentation</a>
-        <a href="/FennixProject/headers_documentations"><i class="fa-solid fa-file-code"></i> API</a>
+        <li style="float:left"><a class="active_f blur" href="/">Fennix Project</a></li>
+        <a href="/full_documentations"><i class="fa-solid fa-book-bookmark"></i> Full Documentation</a>
+        <a href="/headers_documentations"><i class="fa-solid fa-file-code"></i> API</a>
         <a href="#contribute"><i class="fa-brands fa-git-alt"></i> Contribute</a>
         <a href="#news"><i class="fa-regular fa-newspaper"></i> News</a>
         <a style="float:right" href="https://github.com/EnderIce2/FennixProject/actions"><i class="fa-solid fa-download"></i> Download</a>
