--- a/tools/website/index.html
+++ b/tools/website/index.html
@@ -14,14 +14,14 @@
         <a href="/headers_documentations"><i class="fa-solid fa-file-code"></i> API</a>
         <a href="#contribute"><i class="fa-brands fa-git-alt"></i> Contribute</a>
         <a href="#news"><i class="fa-regular fa-newspaper"></i> News</a>
-        <a style="float:right" href="https://github.com/EnderIce2/FennixProject/actions"><i class="fa-solid fa-download"></i> Download</a>
+        <a style="float:right" href="https://github.com/EnderIce2/FennixProject/actions/workflows/makefile.yml"><i class="fa-solid fa-download"></i> Download</a>
     </div>
     <div class="header" style="background-image: url(assets/2022-05-24_01-10.png);">
         <br><br><br><br><br><br>
         <h1 class="on-background-text move-to-middle gradienttext">Fennix Project</h1>
         <h4 class="on-background-text move-to-middle">Operating System from scratch made in C and C++</h4>
-        <button class="button round-border-med" style="backdrop-filter: blur(5px); cursor: pointer;" onclick="window.location.href='https://github.com/EnderIce2/FennixProject/actions'">Download Stable Version</button>
-        <button class="button round-border-med" style="backdrop-filter: blur(5px); cursor: pointer;" onclick="window.location.href='https://github.com/EnderIce2/FennixProject/actions'">Download Unstable Version</button>
+        <button class="button round-border-med" style="backdrop-filter: blur(5px); cursor: pointer;" onclick="window.location.href='https://github.com/EnderIce2/FennixProject/releases'">Download Stable Version</button>
+        <button class="button round-border-med" style="backdrop-filter: blur(5px); cursor: pointer;" onclick="window.location.href='https://github.com/EnderIce2/FennixProject/actions/workflows/makefile.yml'">Download Unstable Version</button>
         <br><br><br><br><br><br><br><br><br>
     </div>
 
