--- a/tools/website/index.html
+++ b/tools/website/index.html
@@ -16,7 +16,7 @@
         <a href="#news"><i class="fa-regular fa-newspaper"></i> News</a>
         <a style="float:right" href="https://github.com/EnderIce2/FennixProject/actions/workflows/makefile.yml"><i class="fa-solid fa-download"></i> Download</a>
     </div>
-    <div class="header" style="background-image: url(assets/2022-05-24_01-10.png);">
+    <div class="header" style="background-image: url(assets/Screenshot_Fennix.png);">
         <br><br><br><br><br><br>
         <h1 class="on-background-text move-to-middle gradienttext">Fennix Project</h1>
         <h4 class="on-background-text move-to-middle">Operating System from scratch made in C and C++</h4>
